@@ -1,7 +1,7 @@
 #  File src/library/utils/R/sourceutils.R
 #  Part of the R package, http://www.R-project.org
 #
-#  Copyright (C) 1995-2012 The R Core Team
+#  Copyright (C) 1995-2013 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -111,7 +111,10 @@ substr_with_tabs <- function(x, start, stop, tabsize = 8) {
 }
 
 getParseData <- function(x, includeText = NA) {
-    srcfile <- getSrcfile(x)
+    if (inherits(x, "srcfile")) 
+	srcfile <- x
+    else 
+	srcfile <- getSrcfile(x)
 
     if (is.null(srcfile))
     	return(NULL)
